SERVER-57260 Plumb through userCanceled to the _shardsvrAbortReshardCollection command and participant machine abort functions