src/mongo/db/s/resharding/resharding_donor_service.h
@@ -101,7 +101,7 @@ public:
                                     const ReshardingDonorDocument& donorDoc);
 
     // Initiates the cancellation of the resharding operation.
-    void abort();
+    void abort(bool isUserCancelled);
 
 private:
     /**
